--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="conteiner">
     <header class="header">
         <nav class="nav">
             <a class="nav-logo" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
@@ -34,11 +35,15 @@
             </ul>
         </address>
     </header>
+    </div>
     <main>
+        <div>
         <section class="section-one" >
             <h1 class="section-one-text">Effective Solutions for Your Business</h1>
             <button class="section-one-button" type="button">Order Service</button>
         </section>
+        </div>
+        <div>
         <section class="section-two">`
             <h2 hidden>our advantages </h2>
             <ul>
@@ -63,6 +68,8 @@
                 </li>
             </ul>
         </section>
+        </div>
+        <div>
         <section class="our-team">
             <h2 class="our-team-h">Our Team</h2>
             <ul class="our-team-link">
@@ -87,6 +94,8 @@
                 </li>
             </ul>
         </section>
+        </div>
+        <div>
         <section class="portfolio">
             <h2 hidden class="portfolio-title">Our Portfolio</h2>
             <ul>
@@ -122,10 +131,13 @@
                 </li>
             </ul>
         </section>
+        </div>
         </main>
+        <div>
         <footer class="footer">
             <a class="footer-logo" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </footer>
+        </div>
 </body>
 </html>
