--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="conteiner">
+    <div class="container">
     <header class="header">
         <nav class="nav">
             <a class="nav-logo" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
@@ -133,7 +133,7 @@
         </section>
         </div>
         </main>
-        <div>
+        <div class=" container">
         <footer class="footer">
             <a class="footer-logo" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
