--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
                 </li>
                 <li>
                     <h3 class="section-two-h">Diligence</h3>
-                    <p class="section-two-text">Research and confirm brands that present the strongest digital growth opportunities and minimize
-                        risk.</p>
+                    <p class="section-two-text">Research and confirm brands that present the strongest digital growth opportunities and minimizerisk.</p>
                 </li>
                 <li>
                     <h3 class="section-two-h">Technologies</h3>
@@ -88,8 +87,6 @@
                 </li>
             </ul>
         </section>
-        </div>
-        <div>
         <section class="portfolio">
             <h2 hidden class="portfolio-title">Our Portfolio</h2>
             <ul>
