--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 </head>
 <body>
     <div class="container">
-    <header class="header">
+    <header>
+        <div class="header">
         <nav class="nav">
             <a class="nav-logo" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
             <ul class="nav-link">
@@ -34,7 +35,9 @@
                 <li><a class="address-list" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+        </div>
     </header>
+</div>
     <main>
         <section class="section-one" >
             <h1 class="section-one-text">Effective Solutions for Your Business</h1>
