--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             </ul>
         </section>
         <section class="portfolio">
+            <div class="container">
             <h2 hidden class="portfolio-title">Our Portfolio</h2>
             <ul>
                 <li>
@@ -124,12 +125,14 @@
                     <p class="portfolio-text">Marketing</p>
                 </li>
             </ul>
+            </div>
         </section>
         </main>
         <footer class="footer">
+            <div class="container">
             <a class="footer-logo" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </div>
         </footer>
-        </div>
 </body>
 </html>
