--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
     <header>
         <div class="header">
         <nav class="nav">
@@ -37,13 +36,15 @@
         </address>
         </div>
     </header>
-</div>
     <main>
         <section class="section-one" >
+            <div>
             <h1 class="section-one-text">Effective Solutions for Your Business</h1>
-            <button class="section-one-button" type="button">Order Service</button>
+            <button class="button" type="button">Order Service</button>
+            </div>
         </section>
         <section class="section-two">`
+            <div class="container">
             <h2 hidden>our advantages </h2>
             <ul>
                 <li>
@@ -65,8 +66,10 @@
                     </p>
                 </li>
             </ul>
+            </div>
         </section>
         <section class="our-team">
+            <div class="container">
             <h2 class="our-team-h">Our Team</h2>
             <ul class="our-team-link">
                 <li class="our-team-list">
@@ -89,6 +92,7 @@
                     <p class="our-team-text">UI Designer</p>
                 </li>
             </ul>
+            </div>
         </section>
         <section class="portfolio">
             <div class="container">
