--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 <body>
     <header>
+        <div class="container">
         <div class="header">
         <nav class="nav">
             <a class="nav-logo" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
@@ -35,11 +36,12 @@
             </ul>
         </address>
         </div>
+        </div>
     </header>
     <main>
         <section class="section-one" >
-            <div>
-            <h1 class="section-one-text">Effective Solutions for Your Business</h1>
+            <div class="container">
+            <h1 class="section-one-h">Effective Solutions for Your Business</h1>
             <button class="button" type="button">Order Service</button>
             </div>
         </section>
