--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         </section>
         <section class="section-two">`
             <div class="container">
-            <h2 hidden>our advantages </h2>
-            <ul>
-                <li>
+            <h2 hidden class="visually-hidden">our advantages </h2>
+            <ul class="section-two-link">
+                <li class="section-two-list">
                     <h3 class="section-two-h">Strategy</h3>
                     <p class="section-two-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
