--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <header>
         <div class="container">
         <div class="header">
-        <nav class="nav">
-            <a class="nav-logo" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
+        <nav class="header-nav">
+            <a class="header-nav-logo" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
             <ul class="nav-link">
-                <li class="nav-list-menu"><a class="nav-list" href="./index.html">Studio</a></li>
-                <li class="nav-list-menu"> <a class="nav-list" href="">Portfolio</a></li>
-                <li class="nav-list-menu" > <a class="nav-list" href="">Contacts </a></li>
+                <li class="nav-item-menu"><a class="nav-list" href="./index.html">Studio</a></li>
+                <li class="nav-item-menu"> <a class="nav-list" href="">Portfolio</a></li>
+                <li class="nav-item-menu" > <a class="nav-list" href="">Contacts </a></li>
             </ul>
         </nav>
         <address class="address">
