--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="container">
             <h2 hidden class="visually-hidden">our advantages </h2>
             <ul class="section-two-link">
-                <li class="section-two-list">
+                <li class="section-two-li">
                     <h3 class="section-two-h">Strategy</h3>
                     <p class="section-two-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
@@ -76,21 +76,23 @@
             <ul class="our-team-link">
                 <li class="our-team-list">
                     <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" height="380">
-                    <h3 class="our-team-etem">Mark Guerrero</h3>
+                    <div class="name">
+                    <h3 class="our-team-h3">Mark Guerrero</h3>
                     <p class="our-team-text">Product Designer</p>
+                    </div>
                 </li>
                 <li class="our-team-list"><img src="./images/TomFord.jpg" alt="Tom Ford" width="264" height="380">
-                    <h3 class="our-team-etem">Tom Ford</h3>
+                    <h3 class="our-team-h3">Tom Ford</h3>
                     <p class="our-team-text">Frontend Developer</p>
                 </li>
                 <li class="our-team-list">
                     <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" height="380">
-                    <h3 class="our-team-etem">Camila Garcia</h3>
+                    <h3 class="our-team-h3">Camila Garcia</h3>
                     <p class="our-team-text">Marketing</p>
                 </li>
                 <li class="our-team-list">
                     <img src="./images/DanielWilson.jpg" alt="DanielWilson" width="264" height="380">
-                    <h3 class="our-team-etem">Daniel Wilson</h3>
+                    <h3 class="our-team-h3">Daniel Wilson</h3>
                     <p class="our-team-text">UI Designer</p>
                 </li>
             </ul>
