--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <h2 class="our-team-h">Our Team</h2>
             <ul class="our-team-link">
                 <li class="our-team-list">
-                    <div class="name"></div>
                     <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" height="380">
+                    <div class="name">
                     <h3 class="our-team-h3">Mark Guerrero</h3>
                     <p class="our-team-text">Product Designer</p>
                     </div>
@@ -91,14 +91,14 @@
                 <li class="our-team-list">
                     <div class="name">
                     <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" height="380">
-                    <h3 class="our-team-h3">Camila Garcia</h3>
+                    <h3 class="name-h3">Camila Garcia</h3>
                     <p class="our-team-text">Marketing</p>
                     </div>
                 </li>
                 <li class="our-team-list">
                     <img src="./images/DanielWilson.jpg" alt="DanielWilson" width="264" height="380">
                     <div class="name">
-                    <h3 class="our-team-h3">Daniel Wilson</h3>
+                    <h3 class="name-h3">Daniel Wilson</h3>
                     <p class="our-team-text">UI Designer</p>
                     </div>
                 </li>
