--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
                 <li class="our-team-list">
                     <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" height="380">
                     <div class="name">
-                    <h3 class="name-h3">Camila Garcia</h3>
+                    <h3 class="our-team-h3">Camila Garcia</h3>
                     <p class="our-team-text">Marketing</p>
                     </div>
                 </li>
                 <li class="our-team-list">
                     <img src="./images/DanielWilson.jpg" alt="DanielWilson" width="264" height="380">
                     <div class="name">
-                    <h3 class="name-h3">Daniel Wilson</h3>
+                    <h3 class="our-team-h3">Daniel Wilson</h3>
                     <p class="our-team-text">UI Designer</p>
                     </div>
                 </li>
@@ -108,8 +108,8 @@
         <section class="portfolio">
             <div class="container">
             <h2 hidden class="portfolio-title">Our Portfolio</h2>
-            <ul>
-                <li>
+            <ul class="portfolio-link">
+                <li class="portfolio-list">
                     <img src="./images/BankingApp.jpg" alt="Banking App" width="360">
                     <h3 class="portfolio-h">Banking App </h3>
                     <p class="portfolio-text"> App</p>
