--- a/index.html
+++ b/index.html
@@ -109,10 +109,12 @@
             <div class="container">
             <h2 hidden class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-link">
-                <li class="portfolio-list">
+                <li class="portfolio-item">
                     <img src="./images/BankingApp.jpg" alt="Banking App" width="360">
+                    <div class="profi">
                     <h3 class="portfolio-h">Banking App </h3>
                     <p class="portfolio-text"> App</p>
+                    </div>
                 </li>
                 <li>
                     <img src="./images/CashlessPayment.jpg" alt="Cashless Payment" width="360">
