--- a/index.html
+++ b/index.html
@@ -74,28 +74,28 @@
             <div class="container">
             <h2 class="our-team-h">Our Team</h2>
             <ul class="our-team-link">
-                <li class="our-team-list">
+                <li class="our-team-item">
                     <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" height="380">
                     <div class="name">
                     <h3 class="our-team-h3">Mark Guerrero</h3>
                     <p class="our-team-text">Product Designer</p>
                     </div>
                 </li>
-                <li class="our-team-list">
+                <li class="our-team-item">
                     <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" height="380">
                     <div class="name">
                     <h3 class="our-team-h3">Tom Ford</h3>
                     <p class="our-team-text">Frontend Developer</p>
                     </div>
                 </li>
-                <li class="our-team-list">
+                <li class="our-team-item">
                     <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" height="380">
                     <div class="name">
                     <h3 class="our-team-h3">Camila Garcia</h3>
                     <p class="our-team-text">Marketing</p>
                     </div>
                 </li>
-                <li class="our-team-list">
+                <li class="our-team-item">
                     <img src="./images/DanielWilson.jpg" alt="DanielWilson" width="264" height="380">
                     <div class="name">
                     <h3 class="our-team-h3">Daniel Wilson</h3>
