--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="container">
             <h2 hidden class="visually-hidden">our advantages </h2>
             <ul class="section-two-link">
-                <li class="section-two-li">
+                <li class="section-two-item">
                     <h3 class="section-two-h">Strategy</h3>
                     <p class="section-two-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
