--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                     <p class="section-two-text">Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
                 </li>
-                <li>
+                <li class="section-two-item">
                     <h3 class="section-two-h">Diligence</h3>
                     <p class="section-two-text">Research and confirm brands that present the strongest digital growth opportunities and minimizerisk.</p>
                 </li>
-                <li>
+                <li class="section-two-item">
                     <h3 class="section-two-h">Technologies</h3>
                     <p class="section-two-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                     </p>
