--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <h3 class="section-two-h">Strategy</h3>
                     <p class="section-two-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li>
+                <li class="section-two-item">
                     <h3 class="section-two-h">Punctuality</h3>
                     <p class="section-two-text">Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
