--- a/index.html
+++ b/index.html
@@ -84,21 +84,21 @@
                 <li class="our-team-item">
                     <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" height="380">
                     <div class="name">
-                    <h3 class="our-team-h3">Tom Ford</h3>
+                    <h3 class="name-title">Tom Ford</h3>
                     <p class="our-team-text">Frontend Developer</p>
                     </div>
                 </li>
                 <li class="our-team-item">
                     <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" height="380">
                     <div class="name">
-                    <h3 class="our-team-h3">Camila Garcia</h3>
+                    <h3 class="name-title">Camila Garcia</h3>
                     <p class="our-team-text">Marketing</p>
                     </div>
                 </li>
                 <li class="our-team-item">
                     <img src="./images/DanielWilson.jpg" alt="DanielWilson" width="264" height="380">
                     <div class="name">
-                    <h3 class="our-team-h3">Daniel Wilson</h3>
+                    <h3 class="name-title">Daniel Wilson</h3>
                     <p class="our-team-text">UI Designer</p>
                     </div>
                 </li>
