--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header class="main-header">
         <div class="container">
         <div class="header">
         <nav class="header-nav">
