--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header class="main-header">
         <div class="container">
-        <div class="header">
+        <div class="header-page">
         <nav class="header-nav">
             <a class="header-nav-logo" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
             <ul class="nav-link">
