--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
         <div class="header-page">
         <nav class="header-nav">
-            <a class="header-nav-logo" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
+            <a class="nav-logo-web" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
             <ul class="nav-link">
                 <li class="nav-item-menu"><a class="nav-list" href="./index.html">Studio</a></li>
                 <li class="nav-item-menu"> <a class="nav-list" href="">Portfolio</a></li>
