--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
         <section class="section-one" >
             <div class="container">
-            <h1 class="section-one-h">Effective Solutions for Your Business</h1>
+            <h1 class="section-one-title">Effective Solutions for Your Business</h1>
             <button class="button" type="button">Order Service</button>
             </div>
         </section>
@@ -77,7 +77,7 @@
                 <li class="our-team-item">
                     <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" height="380">
                     <div class="name">
-                    <h3 class="our-team-h3">Mark Guerrero</h3>
+                    <h3 class="our-team-title">Mark Guerrero</h3>
                     <p class="our-team-text">Product Designer</p>
                     </div>
                 </li>
