--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <li class="our-team-item">
                     <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" height="380">
                     <div class="name">
-                    <h3 class="our-team-title">Mark Guerrero</h3>
+                    <h3 class="name-title">Mark Guerrero</h3>
                     <p class="our-team-text">Product Designer</p>
                     </div>
                 </li>
