--- a/index.html
+++ b/index.html
@@ -113,42 +113,42 @@
                     <img src="./images/BankingApp.jpg" alt="Banking App" width="360">
                     <div class="profi">
                     <h3 class="profi-title">Banking App </h3>
-                    <p class="portfolio-text"> App</p>
+                    <p class="profi-text"> App</p>
                     </div>
                 </li>
                 <li>
                     <img src="./images/CashlessPayment.jpg" alt="Cashless Payment" width="360">
                     <div class="profi">
                     <h3 class="profi-title">Cashless Payment</h3>
-                    <p class="portfolio-text">Marketing</p>
+                    <p class="profi-text">Marketing</p>
                     </div>
                 </li>
                 <li>
                     <img src="./images/MeditationApp.jpg" alt="Meditation App" width="360">
                     <div class="profi">
                     <h3 class="profi-title">Meditation App</h3>
-                    <p class="portfolio-text">App</p>
+                    <p class="profi-text">App</p>
                     </div>
                 </li>
                 <li>
                     <img src="./images/TaxiService.jpg" alt=" Taxi Service" width="360">
                     <div class="profi">
                     <h3 class="profi-title">Taxi Service</h3>
-                    <p class="portfolio-text">Marketing</p>
+                    <p class="profi-text">Marketing</p>
                     </div>
                 </li>
                 <li>
                     <img src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360">
                     <div class="profi">
                     <h3 class="profi-title">Screen Illustrations</h3>
-                    <p class="portfolio-text">Design</p>
+                    <p class="profi-text">Design</p>
                     </div>
                 </li>
                 <li>
                     <img src="./images/OnlineCourses.jpg" alt="Online Courses" width="360">
                     <div class="profi">
                     <h3 class="profi-title">Online Courses</h3>
-                    <p class="portfolio-text">Marketing</p>
+                    <p class="profi-text">Marketing</p>
                     </div>
                 </li>
             </ul>
