--- a/index.html
+++ b/index.html
@@ -116,35 +116,35 @@
                     <p class="profi-text"> App</p>
                     </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/CashlessPayment.jpg" alt="Cashless Payment" width="360">
                     <div class="profi">
                     <h3 class="profi-title">Cashless Payment</h3>
                     <p class="profi-text">Marketing</p>
                     </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/MeditationApp.jpg" alt="Meditation App" width="360">
                     <div class="profi">
                     <h3 class="profi-title">Meditation App</h3>
                     <p class="profi-text">App</p>
                     </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/TaxiService.jpg" alt=" Taxi Service" width="360">
                     <div class="profi">
                     <h3 class="profi-title">Taxi Service</h3>
                     <p class="profi-text">Marketing</p>
                     </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360">
                     <div class="profi">
                     <h3 class="profi-title">Screen Illustrations</h3>
                     <p class="profi-text">Design</p>
                     </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/OnlineCourses.jpg" alt="Online Courses" width="360">
                     <div class="profi">
                     <h3 class="profi-title">Online Courses</h3>
