--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="main-header">
-        <div class="container">
-        <div class="header-page">
+    <header>
+        <div class="conteiner">
         <nav class="header-nav">
             <a class="nav-logo-web" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
             <ul class="nav-link">
