--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <div class="conteiner">
+    <header class="header">
+        <div class="container">
         <nav class="header-nav">
             <a class="nav-logo-web" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
             <ul class="nav-link">
@@ -34,8 +34,7 @@
                 <li class="address-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
-        </div>
-        </div>
+    </div>
     </header>
     <main>
         <section class="section-one" >
