--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container-header">
         <nav class="header-nav">
             <a class="nav-logo-web" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
             <ul class="nav-link">
@@ -73,28 +73,28 @@
             <h2 class="our-team-h">Our Team</h2>
             <ul class="our-team-link">
                 <li class="our-team-item">
-                    <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" height="380">
+                    <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" height="260">
                     <div class="name">
                     <h3 class="name-title">Mark Guerrero</h3>
                     <p class="our-team-text">Product Designer</p>
                     </div>
                 </li>
                 <li class="our-team-item">
-                    <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" height="380">
+                    <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" height="260">
                     <div class="name">
                     <h3 class="name-title">Tom Ford</h3>
                     <p class="our-team-text">Frontend Developer</p>
                     </div>
                 </li>
                 <li class="our-team-item">
-                    <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" height="380">
+                    <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" height="260">
                     <div class="name">
                     <h3 class="name-title">Camila Garcia</h3>
                     <p class="our-team-text">Marketing</p>
                     </div>
                 </li>
                 <li class="our-team-item">
-                    <img src="./images/DanielWilson.jpg" alt="DanielWilson" width="264" height="380">
+                    <img src="./images/DanielWilson.jpg" alt="DanielWilson" width="264" height="260">
                     <div class="name">
                     <h3 class="name-title">Daniel Wilson</h3>
                     <p class="our-team-text">UI Designer</p>
@@ -108,42 +108,42 @@
             <h2 hidden class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-link">
                 <li class="portfolio-item">
-                    <img src="./images/BankingApp.jpg" alt="Banking App" width="360">
+                    <img src="./images/BankingApp.jpg" alt="Banking App" width="360" height="300">
                     <div class="profi">
                     <h3 class="profi-title">Banking App </h3>
                     <p class="profi-text"> App</p>
                     </div>
                 </li>
                 <li class="portfolio-item">
-                    <img src="./images/CashlessPayment.jpg" alt="Cashless Payment" width="360">
+                    <img src="./images/CashlessPayment.jpg" alt="Cashless Payment" width="360" height="300">
                     <div class="profi">
                     <h3 class="profi-title">Cashless Payment</h3>
                     <p class="profi-text">Marketing</p>
                     </div>
                 </li>
                 <li class="portfolio-item">
-                    <img src="./images/MeditationApp.jpg" alt="Meditation App" width="360">
+                    <img src="./images/MeditationApp.jpg" alt="Meditation App" width="360" height="300">
                     <div class="profi">
                     <h3 class="profi-title">Meditation App</h3>
                     <p class="profi-text">App</p>
                     </div>
                 </li>
                 <li class="portfolio-item">
-                    <img src="./images/TaxiService.jpg" alt=" Taxi Service" width="360">
+                    <img src="./images/TaxiService.jpg" alt=" Taxi Service" width="360" height="300">
                     <div class="profi">
                     <h3 class="profi-title">Taxi Service</h3>
                     <p class="profi-text">Marketing</p>
                     </div>
                 </li>
                 <li class="portfolio-item">
-                    <img src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360">
+                    <img src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360" height="300">
                     <div class="profi">
                     <h3 class="profi-title">Screen Illustrations</h3>
                     <p class="profi-text">Design</p>
                     </div>
                 </li>
                 <li class="portfolio-item">
-                    <img src="./images/OnlineCourses.jpg" alt="Online Courses" width="360">
+                    <img src="./images/OnlineCourses.jpg" alt="Online Courses" width="360" height="300">
                     <div class="profi">
                     <h3 class="profi-title">Online Courses</h3>
                     <p class="profi-text">Marketing</p>
