--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
                 <li class="nav-item-menu" > <a class="nav-list" href="">Contacts </a></li>
             </ul>
         </nav>
-        <address class="address">
+        <div>
+            <address>
+            <div class="container-address">
             <ul class="address-link">
-                <li class="address-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="address-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li class="address-item"><a class="address-a" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="address-item"><a class="address-a" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
-        </address>
-    </div>
+        </div>
     </header>
     <main>
         <section class="section-one" >
