--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="container-header">
+        <div class="conteiner header-container">
         <nav class="header-nav">
             <a class="nav-logo-web" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
             <ul class="nav-link">
@@ -36,6 +36,7 @@
                 <li class="address-item"><a class="address-a" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </div>
+        
     </header>
     <main>
         <section class="section-one" >
