--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 <body>
     <header class="header">
+        <div class="container">
         <div class="conteiner header-container">
         <nav class="header-nav">
             <a class="nav-logo-web" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
@@ -29,14 +30,15 @@
             </ul>
         </nav>
         <div>
-            <address>
+            <address class="address-page">
             <div class="container-address">
             <ul class="address-link">
                 <li class="address-item"><a class="address-a" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="address-item"><a class="address-a" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </div>
-        
+    </address>
+        </div>
     </header>
     <main>
         <section class="section-one" >
