--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li class="nav-item-menu" > <a class="nav-list" href="">Contacts </a></li>
             </ul>
         </nav>
+        </div>
         <div>
             <address class="address-page">
             <div class="container-address">
@@ -38,6 +39,7 @@
             </ul>
         </div>
     </address>
+    </div>
         </div>
     </header>
     <main>
