--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 <body>
     <header class="header">
+        <div class="container">
         <div class="conteiner header-container">
         <nav class="header-nav">
             <a class="nav-logo-web" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
@@ -38,6 +39,7 @@
             </ul>
         </div>
     </address>
+    </div>
     </div>
     </header>
     <main>
