--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
-        <div class="conteiner header-container">
-        <nav class="header-nav">
+        <div class=" header-container">
+        <nav class="nav">
             <a class="nav-logo-web" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
             <ul class="nav-link">
                 <li class="nav-item-menu"><a class="nav-list" href="./index.html">Studio</a></li>
@@ -36,8 +35,7 @@
                 <li class="address-item"><a class="address-a" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
     </address>
-    </div>
-    </div>
+        </div>
     </header>
     <main>
         <section class="section-one" >
@@ -79,7 +77,7 @@
                     <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" height="260">
                     <div class="name">
                     <h3 class="name-title">Mark Guerrero</h3>
-                    <p class="our-team-text">Product Designer</p>
+                    <p class="our-team-text"> Designer</p>
                     </div>
                 </li>
                 <li class="our-team-item">
@@ -88,7 +86,7 @@
                     <h3 class="name-title">Tom Ford</h3>
                     <p class="our-team-text">Frontend Developer</p>
                     </div>
-                </li>
+                </li>Product
                 <li class="our-team-item">
                     <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" height="260">
                     <div class="name">
