--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header class="header">
-        <div class=" header-container">
+        <div class="container header-container">
         <nav class="nav">
             <a class="nav-logo-web" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
             <ul class="nav-link">
@@ -28,14 +28,13 @@
                 <li class="nav-item-menu" > <a class="nav-list" href="">Contacts </a></li>
             </ul>
         </nav>
-        </div>
             <address class="address-page">
             <ul class="address-link">
                 <li class="address-item"><a class="address-a" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="address-item"><a class="address-a" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
     </address>
-        </div>
+    </div>
     </header>
     <main>
         <section class="section-one" >
