--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     </div>
     </header>
     <main>
-        <section class="section-one" >
+        <section class="section-one section" >
             <div class="container">
             <h1 class="section-one-title">Effective Solutions for Your Business</h1>
             <button class="button" type="button">Order Service</button>
             </div>
         </section>
-        <section class="section-two">`
+        <section class="section-two section">`
             <div class="container">
             <h2 hidden class="visually-hidden">our advantages </h2>
             <ul class="section-two-link">
@@ -68,7 +68,7 @@
             </ul>
             </div>
         </section>
-        <section class="our-team">
+        <section class="our-team section">
             <div class="container">
             <h2 class="our-team-h">Our Team</h2>
             <ul class="our-team-link">
@@ -103,9 +103,9 @@
             </ul>
             </div>
         </section>
-        <section class="portfolio">
+        <section class="portfolio section">
             <div class="container">
-            <h2 hidden class="portfolio-title">Our Portfolio</h2>
+            <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-link">
                 <li class="portfolio-item">
                     <img src="./images/BankingApp.jpg" alt="Banking App" width="360" height="300">
