--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     </header>
     <main>
         <section class="section-one section" >
-            <div class="container">
+            <div class="container section-one">
             <h1 class="section-one-title">Effective Solutions for Your Business</h1>
             <button class="button" type="button">Order Service</button>
             </div>
         </section>
         <section class="section-two section">`
-            <div class="container">
+            <div class="container section-two">
             <h2 hidden class="visually-hidden">our advantages </h2>
             <ul class="section-two-link">
                 <li class="section-two-item">
@@ -69,7 +69,7 @@
             </div>
         </section>
         <section class="our-team section">
-            <div class="container">
+            <div class="container our-team">
             <h2 class="our-team-h">Our Team</h2>
             <ul class="our-team-link">
                 <li class="our-team-item">
@@ -104,7 +104,7 @@
             </div>
         </section>
         <section class="portfolio section">
-            <div class="container">
+            <div class="container portfolio">
             <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-link">
                 <li class="portfolio-item">
