--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="container header-container">
         <nav class="nav">
-            <a class="nav-logo-web" href="./index.html">Web<span class="nav-logo-studio">Studio</span></a>
+            <a class="logo header-logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
             <ul class="nav-link">
                 <li class="nav-item-menu"><a class="nav-list" href="./index.html">Studio</a></li>
                 <li class="nav-item-menu"> <a class="nav-list" href="">Portfolio</a></li>
@@ -33,7 +33,7 @@
     <main>
         <section class="section-one section" >
             <div class="container section-one">
-            <h1 class="section-one-title">Effective Solutions for Your Business</h1>
+            <h1 class="section-one-title">Effective Solutions<br> for Your Business</h1>
             <button class="button" type="button">Order Service</button>
             </div>
         </section>
@@ -79,7 +79,7 @@
                     <h3 class="name-title">Tom Ford</h3>
                     <p class="our-team-text">Frontend Developer</p>
                     </div>
-                </li>Product
+                </li>
                 <li class="our-team-item">
                     <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" height="260">
                     <div class="name">
