--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="container header-container">
+        <div class="container">
         <nav class="nav">
             <a class="logo header-logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
             <ul class="nav-link">
@@ -32,13 +32,13 @@
     </header>
     <main>
         <section class="section-one section" >
-            <div class="container section-one">
+            <div class="container">
             <h1 class="section-one-title">Effective Solutions<br> for Your Business</h1>
             <button class="button" type="button">Order Service</button>
             </div>
         </section>
         <section class="section-two section">`
-            <div class="container section-two">
+            <div class="container">
             <h2 hidden class="visually-hidden">our advantages </h2>
             <ul class="section-two-link">
                 <li class="section-two-item">
@@ -63,7 +63,7 @@
             </div>
         </section>
         <section class="our-team section">
-            <div class="container our-team">
+            <div class="container">
             <h2 class="our-team-h">Our Team</h2>
             <ul class="our-team-link">
                 <li class="our-team-item">
@@ -98,7 +98,7 @@
             </div>
         </section>
         <section class="portfolio section">
-            <div class="container portfolio">
+            <div class="container">
             <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-link">
                 <li class="portfolio-item">
