--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container header-container">
         <nav class="nav">
             <a class="logo header-logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
             <ul class="nav-link">
@@ -37,7 +37,7 @@
             <button class="button" type="button">Order Service</button>
             </div>
         </section>
-        <section class="section-two section">`
+        <section class="section-two section">
             <div class="container">
             <h2 hidden class="visually-hidden">our advantages </h2>
             <ul class="section-two-link">
